--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,16 @@
 <html lang="fr">
 	<head>
 
+	<link rel="icon" type="image/png" href="../images/rb.png" />
+
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="content-language" content="fr">
     <meta name="language" content="fr">
-    <meta name="copyright" content="http://guerin-pierre.fr">
-    <meta name="author" content="guerin-pierre.fr">
+    <meta name="copyright" content="http://bertrand-remi.fr">
+    <meta name="author" content="bertrand-remi.fr">
 	
 	<title>Rémi BERTRAND</title>
 
@@ -118,11 +120,11 @@
 			</div>
 			<h1 class="droit">Contact</h1>
 			
-			<div class="container">
+			<div class="container-contact">
 				<section class="content">
 					<form action="/" method="post">
 						<div class="input-position">
-							<span class="input input--hoshi">
+							<!-- <span class="input input--hoshi">
 								<input class="input__field input__field--hoshi" name="nom" type="text" id="input-4" />
 								<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4">
 									<span class="input__label-content input__label-content--hoshi">Nom</span>
@@ -133,7 +135,7 @@
 								<label class="input__label input__label--hoshi input__label--hoshi-color-2" for="input-4">
 									<span class="input__label-content input__label-content--hoshi">Prénom</span>
 								</label>
-							</span>
+							</span> -->
 							<span class="input input--hoshi">
 								<input class="input__field input__field--hoshi" name="email" type="email" id="input-4" />
 								<label class="input__label input__label--hoshi input__label--hoshi-color-3" for="input-4">
