modif pour mise en production

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,8 @@
 	
 	<title>Rémi BERTRAND</title>
 
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="/public/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="/public/css/style.css"/>
 	</head>
 	
 	<body>
@@ -164,6 +164,6 @@
 				</section>
 			</div>
 	    </div>
-		<script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="/public/js/script.js"></script>
 	</body>
 </html>
