--- a/views/index.ejs
+++ b/views/index.ejs
@@ -155,9 +155,9 @@
 							<input type="submit" value="Envoyer" class="validate"/>
 						</div>
 						<div class="logo">
-							<a href="https://twitter.com/?lang=fr" target="_blanck"><i class="fa fa-3x fa-twitter-square"></i></a>
-							<a href="https://www.linkedin.com/home?trk=nav_responsive_tab_home" target="_blanck"><i class="fa fa-3x fa-linkedin-square"></i></a>
-							<a href="https://fr.pinterest.com/" target="_blanck"><i class="fa fa-3x fa-pinterest-square"></i></a>
+							<a href="https://twitter.com/Thalion26" target="_blanck"><i class="fa fa-3x fa-twitter-square"></i></a>
+							<a href="https://www.linkedin.com/in/remibertrand" target="_blanck"><i class="fa fa-3x fa-linkedin-square"></i></a>
+							<a href="https://fr.pinterest.com/thalion26/" target="_blanck"><i class="fa fa-3x fa-pinterest-square"></i></a>
 							<a href="https://github.com/thalion26" target="_blanck"><i class="fa fa-3x fa-github-square"></i></a>
 						</div>
 					</form>
