--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 
-	<link rel="icon" type="image/png" href="../images/rb.png" />
+	<link rel="icon" type="image/png" href="/public/images/rb.png" />
 
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
