modif fonction close_large pour mozilla

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
 	
 	<body>
 		<div class="div" id="div-1" onclick="open_large('div-1')">
-			<div class="close-div" onclick="close_large('div-1')">
+			<div class="close-div" onclick="close_large(event, 'div-1')">
 				<i class="fa fa-2x fa-times contour"></i>
 			</div>
 			<h1 class="gauche">Profil</h1>
@@ -29,7 +29,7 @@
 	    </div>
 
 	    <div class="div" id="div-2" onclick="open_large('div-2')">
-			<div class="close-div" onclick="close_large('div-2')">
+			<div class="close-div" onclick="close_large(event, 'div-2')">
 				<i class="fa fa-2x fa-times contour"></i>
 			</div>
 			<h1 class="droit">Compétences</h1>
@@ -73,7 +73,7 @@
 	    </div>
 
 	    <div class="div" id="div-3" onclick="open_large('div-3')">
-			<div class="close-div" onclick="close_large('div-3')">
+			<div class="close-div" onclick="close_large(event, 'div-3')">
 				<i class="fa fa-2x fa-times contour"></i>
 			</div>
 			<h1 class="gauche">Parcours</h1>
@@ -115,7 +115,7 @@
 	    </div>
 
 	    <div class="div" id="div-4" onclick="open_large('div-4')">
-			<div class="close-div" onclick="close_large('div-4')">
+			<div class="close-div" onclick="close_large(event, 'div-4')">
 				<i class="fa fa-2x fa-times contour"></i>
 			</div>
 			<h1 class="droit">Contact</h1>
