creation profil et ajout cv

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,6 +153,14 @@ img {
 	width: 32%;
 }
 
+.size-large .profil{
+	background-color: rgba(236, 240, 241,.75);
+	padding: 1%;
+	color: #000;
+	width: 50%;
+	text-align: justify;
+}
+
 .size-large p, .size-large ul li, .size-large h2, .size-large a{
   display: block;
 
