--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,14 @@
 				<i class="fa fa-2x fa-times contour"></i>
 			</div>
 			<h1 class="gauche">Profil</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam architecto tenetur velit aspernatur et provident modi magni unde repellat explicabo blanditiis aut quos magnam numquam nesciunt officia dolorum sequi, reprehenderit.</p>
+			<div class="container">
+				<div class="profil">
+					<p>Après l’obtention de mon BTS électronique, je me suis orienté vers un travail de maintenance et de mise en service dans le domaine de l’électronique et des télécommunications. J’ai également exercé le métier de technicien respiratoire, activité qui m’a amené au contact de nombreux patients.</p>
+					<p>Ces expériences professionnelles m’ont permis de développer ma capacité d’adaptation, mon sens des relations humaines et mon dynamisme. J’ai également pu mettre en pratique mes connaissances techniques et les améliorer.</p>
+					<p>Fortement interéssé par le monde de l'informatique et plus particulierement de celui du web en constante évolution. J'ai eu l'opportunité de pouvoir faire une formation dans ce domaine. Celle-ci m'a permis d'apprendre les bases du développement.</p></br/></br/></br/>
+					<a href="/public/images/cv.pdf">Mon CV au format pdf</a>
+				</div>
+			</div>
 	    </div>
 
 	    <div class="div" id="div-2" onclick="open_large('div-2')">
