modif contenu profil

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
 				<div class="profil">
 					<p>Après l’obtention de mon BTS électronique, je me suis orienté vers un travail de maintenance et de mise en service dans le domaine de l’électronique et des télécommunications. J’ai également exercé le métier de technicien respiratoire, activité qui m’a amené au contact de nombreux patients.</p>
 					<p>Ces expériences professionnelles m’ont permis de développer ma capacité d’adaptation, mon sens des relations humaines et mon dynamisme. J’ai également pu mettre en pratique mes connaissances techniques et les améliorer.</p>
-					<p>Fortement interéssé par le monde de l'informatique et plus particulierement de celui du web en constante évolution. J'ai eu l'opportunité de pouvoir faire une formation dans ce domaine. Celle-ci m'a permis d'apprendre les bases du développement.</p></br/></br/></br/>
+					<p>Fortement interéssé par le monde du web qui est en constante évolution mais aussi par les nouvelles technologies, j'ai eu l'opportunité de pouvoir faire une formation dans ce domaine. Celle-ci m'a permis d'apprendre les bases du développement.</p></br/></br/></br/>
 					<a href="/public/images/cv.pdf">Mon CV au format pdf</a>
 				</div>
 			</div>
