modif page contact

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,116 +266,6 @@ img {
 	font-size: 150%;
 }
 
-/* Hoshi */
-.input--hoshi {
-	overflow: hidden;
-}
-
-.input__field--hoshi {
-	margin-top: 1em;
-	padding: 1.5em 0.15em;
-	width: 100%;
-	background: transparent;
-	color: #fff;
-	height: 70px;
-	font-size: 1em;
-}
-
-.input__label--hoshi {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	padding: 0 0.25em;
-	width: 100%;
-	height: calc(100% - 1em);
-	text-align: left;
-	pointer-events: none;
-}
-
-.input__label-content--hoshi {
-	position: absolute;
-}
-
-.input__label--hoshi::before,
-.input__label--hoshi::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: calc(100% - 10px);
-	border-bottom: 1px solid #B9C1CA;
-}
-
-.input__label--hoshi::after {
-	margin-top: 2px;
-	border-bottom: 4px solid red;
-	-webkit-transform: translate3d(-100%, 0, 0);
-	transform: translate3d(-100%, 0, 0);
-	-webkit-transition: -webkit-transform 0.3s;
-	transition: transform 0.3s;
-}
-
-.input__label--hoshi-color-1::after {
-	border-color: rgba(44, 62, 80,1.0);
-}
-
-.input__label--hoshi-color-2::after {
-	border-color: rgba(44, 62, 80,1.0);
-}
-
-.input__label--hoshi-color-3::after {
-	border-color: rgba(44, 62, 80,1.0);
-}
-
-.input__field--hoshi:focus + .input__label--hoshi::after,
-.input--filled .input__label--hoshi::after {
-	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-}
-
-.input__field--hoshi:focus + .input__label--hoshi .input__label-content--hoshi,
-.input--filled .input__label-content--hoshi {
-	-webkit-animation: anim-1 0.3s forwards;
-	animation: anim-1 0.3s forwards;
-}
-
-@-webkit-keyframes anim-1 {
-	50% {
-		opacity: 0;
-		-webkit-transform: translate3d(1em, 0, 0);
-		transform: translate3d(1em, 0, 0);
-	}
-	51% {
-		opacity: 0;
-		-webkit-transform: translate3d(-1em, -40%, 0);
-		transform: translate3d(-1em, -40%, 0);
-	}
-	100% {
-		opacity: 1;
-		-webkit-transform: translate3d(0, -40%, 0);
-		transform: translate3d(0, -40%, 0);
-	}
-}
-
-@keyframes anim-1 {
-	50% {
-		opacity: 0;
-		-webkit-transform: translate3d(1em, 0, 0);
-		transform: translate3d(1em, 0, 0);
-	}
-	51% {
-		opacity: 0;
-		-webkit-transform: translate3d(-1em, -40%, 0);
-		transform: translate3d(-1em, -40%, 0);
-	}
-	100% {
-		opacity: 1;
-		-webkit-transform: translate3d(0, -40%, 0);
-		transform: translate3d(0, -40%, 0);
-	}
-}
-
 .size-large .container-contact{
 	display: flex;
 	justify-content: space-around;
@@ -433,4 +323,96 @@ form{
 	background-color: rgba(236, 240, 241,.5);
 	padding: 1%;
 	color: #000;
+}
+ 
+/*.contact-form {
+  display: block;
+  position: relative;
+  float: left;
+  width: 75%;
+  margin: 2.5% 12.5%;
+}*/
+.form-group {
+  display: block;
+  position: relative;
+  float: left;
+  width: 100%;
+  margin: 2.5% 0;
+}
+.group-small-left {
+  width: 45%;
+  margin: 2.5% 5% 2.5% 0;
+}
+.group-small-right {
+  width: 45%;
+  margin: 2.5% 0 2.5% 5%;
+}
+label {
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  margin: 1% 0;
+  padding-left: 0.5%;
+  font-size: 1.5em;
+  line-height: 1em;
+  transform: translateY(-222%);
+  -o-transform: translateY(-222%);
+  -ms-transform: translateY(-222%);
+  -moz-transform: translateY(-222%);
+  -webkit-transform: translateY(-222%);
+  transition: all 0.3s;
+  -o-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+}
+.group-small-left label, .group-small-right label{
+  line-height: 0.8em;
+}
+input[type="text"] + label, input[type="email"] + label {
+  top: 100%;
+}
+
+textarea + label {
+  top: 25%;
+}
+input[type="text"], input[type="email"], textarea {
+  display: block;
+  position: relative;
+  float: left;
+  width: 100%;
+  padding-left: 0.5%;
+  line-height: 1.5em;
+  background: none;
+  border: none;
+  border-top: 2px solid rgba(255,255,255,0.5);
+  border-bottom: 2px solid rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.0625);
+  font-family: 'Calendas_Regular';
+  font-size: 2em;
+  color: #fff;
+  z-index: 1;
+}
+
+textarea {
+  height: 200px;
+}
+
+input[type="text"]:focus, input[type="date"]:focus, input[type="email"]:focus, textarea:focus {
+  outline: none;
+}
+
+textarea:focus {
+  height: 12.5rem;
+}
+
+input[type="text"]:focus + label, input[type="email"]:focus + label, textarea:focus + label {
+  font-size: 1em;
+  top: 0;
+}
+
+.filled + label {
+  font-size: 1em;
+  top: 0 !important;
 }
