--- a/public/css/style.css
+++ b/public/css/style.css
@@ -332,21 +332,14 @@ form{
   width: 75%;
   margin: 2.5% 12.5%;
 }*/
-.form-group {
+.groupe {
   display: block;
   position: relative;
   float: left;
   width: 100%;
-  margin: 2.5% 0;
+  margin: 4% 0;
 }
-.group-small-left {
-  width: 45%;
-  margin: 2.5% 5% 2.5% 0;
-}
-.group-small-right {
-  width: 45%;
-  margin: 2.5% 0 2.5% 5%;
-}
+
 label {
   display: block;
   position: absolute;
@@ -367,9 +360,7 @@ label {
   -moz-transition: all 0.3s;
   -webkit-transition: all 0.3s;
 }
-.group-small-left label, .group-small-right label{
-  line-height: 0.8em;
-}
+
 input[type="text"] + label, input[type="email"] + label {
   top: 100%;
 }
