--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,12 +130,12 @@
 			<div class="container-contact">
 				<section class="content">
 					<form action="/" method="post" class="contact-form">
-						<div class="form-group">
+						<div class="groupe">
 						    <input type="email" name="email" />
 						    <label for="email">E-mail</label>
 						</div>
 
-						<div class="form-group">
+						<div class="groupe">
 						    <textarea name="message"></textarea>
 						    <label for="message">Message</label>
 						</div>
