creation section responsive en css pour mobile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,39 +84,16 @@
 				<i class="fa fa-2x fa-times contour"></i>
 			</div>
 			<h1 class="gauche">Parcours</h1>
-			<div class="container">
-				<div class="emploi">
+			<div class="container container2">
+				<div class="emploi1">
 					<h2>GESDAT / EXPRIMM</h2>
 					<p>Développement, maintenance curative et préventive du réseau téléphonie Bouygues Télécoms.</p>
-					<p>Maintenance curative et préventive du réseau 2G en Drôme Ardèche:</p>
-					<ul>
-						<li><i class="fa fa-angle-right"></i> Intervention sur site (antennes réseau mobile) avec différents degrés d’urgence.</li>
-						<li><i class="fa fa-angle-right"></i> Dépannage des équipements au sol (matériel émission et réception réseau).</li>
-						<li><i class="fa fa-angle-right"></i> Intervention en équipe sur pylône pour remplacement câblage et antennes.</li>
-						<li><i class="fa fa-angle-right"></i> Astreintes nuits en semaine, week-ends et jours fériés.</li>
-					</ul>
-					<p>Déploiement du réseau 3G en région Rhône-Alpes et France :</p>
-					<ul>
-						<li><i class="fa fa-angle-right"></i> Participation aux tests du premier territoire couvert par la 3G du réseau Bouygues en France (Lyon).</li>
-						<li><i class="fa fa-angle-right"></i> Mise en route des équipements 3G nouvellement installés (câblage, test qualité réseau).</li>
-					</ul>
+					<p>Maintenance curative et préventive du réseau 2G en Drôme Ardèche.</p>
+					<p>Déploiement du réseau 3G en région Rhône-Alpes et France.</p>
 				</div>
-				<div class="emploi">
+				<div class="emploi2">
 					<h2>Medical'Air / IPSanté</h2>
 					<p>Livraison, suivi et installation de matériel médical pour des patients souffrant d’insuffisance respiratoire et aussi des patients souffrant du syndrome d’apnée du sommeil. </p>
-					<p>Insuffisance Réspiratoire:</p>
-					<ul>
-						<li><i class="fa fa-angle-right"></i> Préparation quotidienne du matériel à livrer (remplissage des cuves d’oxygène et vérification du consommable).</li>
-						<li><i class="fa fa-angle-right"></i> Suivi et livraison à domicile de 8 patients/jour en moyenne dans le secteur sud Drôme – Ardèche.</li>
-						<li><i class="fa fa-angle-right"></i> Gestion des dépannages et installation nouveaux patients.</li>
-						<li><i class="fa fa-angle-right"></i> Entretien et maintenance du matériel.</li>
-						<li><i class="fa fa-angle-right"></i> Astreintes nuits semaines, week-ends et jours fériés.</li>
-					</ul>
-					<p>Apnées du sommeil:</p>
-					<ul>
-						<li><i class="fa fa-angle-right"></i> Visite des patients à domicile pour révision machines (en moyenne 8 rendez-vous/jour).</li>
-						<li><i class="fa fa-angle-right"></i> Livraison matériels aux patients.</li>
-					</ul>
 				</div>
 			</div>
 	    </div>
