--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,7 +91,7 @@ img {
 .gauche{
 	margin-left: 15%;
 	background-color: rgba(0, 0, 0, 0.75);
-	border-radius: 10px;
+	border-radius: 2px;
 	padding: 1%;
 	color: #fff;
 }
@@ -99,7 +99,7 @@ img {
 .droit{
 	margin-right: 15%;
 	background-color: rgba(0, 0, 0, 0.75);
-	border-radius: 10px;
+	border-radius: 2px;
 	padding: 1%;
 	color: #fff;
 }
@@ -146,7 +146,7 @@ img {
 	margin: 2%;
 }
 
-.size-large .school, .size-large .formation, .size-large .emploi, .size-large .competence{
+.size-large .school, .size-large .formation, .size-large .emploi1, .size-large .emploi2, .size-large .competence{
 	background-color: rgba(236, 240, 241,.75);
 	padding: 1%;
 	color: #000;
@@ -200,70 +200,6 @@ img {
 	width: 100%;
 	justify-content: space-around;
 	padding: 9% 0 3% 0;
-}
-
-.input {
-	position: relative;
-	z-index: 1;
-	display: inline-block;
-	margin: 1em;
-	max-width: 350px;
-	width: calc(100% - 2em);
-	vertical-align: top;
-}
-
-.input__field {
-	position: relative;
-	display: block;
-	float: right;
-	padding: 0.8em;
-	width: 60%;
-	border: none;
-	border-radius: 0;
-	background: #f0f0f0;
-	color: #aaa;
-	font-weight: bold;
-	font-family: "Raleway", Helvetica, Arial, sans-serif;
-	-webkit-appearance: none; /* for box shadows to show on iOS */
-}
-
-.input__field:focus {
-	outline: none;
-}
-
-.input__label {
-	display: inline-block;
-	float: right;
-	padding: 0 1em;
-	width: 40%;
-	font-weight: bold;
-	-webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.input__label-content {
-	position: relative;
-	display: block;
-/*	padding: 1.6em 0;*/
-	width: 100%;
-}
-
-.graphic {
-	position: absolute;
-	top: 0;
-	left: 0;
-	fill: none;
-}
-
-.icon {
-	color: #ddd;
-	font-size: 150%;
 }
 
 .size-large .container-contact{
@@ -406,4 +342,85 @@ input[type="text"]:focus + label, input[type="email"]:focus + label, textarea:fo
 .filled + label {
   font-size: 1em;
   top: 0 !important;
+}
+
+/*Responsive designe*/
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 800px) and (orientation : portrait){
+
+	body{
+		flex-direction: column;
+	}
+
+	.div {
+		display: flex;
+	    width: 100%;
+	    position: relative;
+	    height: 25%;
+	}
+
+	.div:hover {
+	    width: 100%;
+	    height: 25%;
+	}
+
+	.gauche{
+		margin-left: 0;
+		font-size: 1em;
+		background-color: rgba(0, 0, 0, 0.75);
+		border-radius: 2px;
+		padding: 2%;
+		color: #fff;
+		line-height: 1em;
+	}
+
+	.droit{
+		margin-right: 0;
+		font-size: 1em;
+		background-color: rgba(0, 0, 0, 0.75);
+		border-radius: 2px;
+		padding: 2%;
+		color: #fff;
+		line-height: 1em;
+	}
+	
+	.size-large{
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
+	.size-large .profil{
+	    font-size: 0.8em;
+	    line-height: 1.5em;
+	    width: 100%;
+	}
+
+	.container2{
+		flex-direction: column;
+	}
+
+	.size-large .emploi1 {
+		width: 96%;
+		margin: 2%;
+		padding: 0 2%;
+		font-size: 0.8em;
+	}
+
+	.size-large .emploi2 {
+		width: 96%;
+		margin: 2%;
+		padding: 0 2%;
+		font-size: 0.8em;
+	}
+	
+	.size-large .school, .size-large .formation, .size-large .competence {
+		width: 100%;
+		margin: 0 2%;
+		font-size: 0.8em;
+	}
+
+	.size-large .container-contact {
+		width: 100%;
+	}
 }
